# brsearch-mcp-server

./: .env.example  LICENSE  README.md  configure_lmstudio.sh  configure_lmstudio_fastmcp.sh  pyproject.toml  test_brave_api.py  test_search_function.py  test_security.py
.github/: copilot-instructions.md
src/url_text_fetcher/: server.py  server_fastmcp.py
